# smith

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  pyproject.toml  uv.toml
.github/workflows/: ci.yml
agents/: openai.yaml
assets/claude-commands/: smith-board.md  smith-build.md  smith-grep.md  smith-pipelines.md  smith-pr.md  smith-prs.md  smith-search.md
benchmarks/runtime/: scenarios.json
evals/: evals.json
references/: auth-troubleshooting.md  behavioral-quality-gates.md  failure-playbook.md  trigger-cases.md  usage-recipes.md
scripts/: benchmark_smith_runtime.py  check_targeted_coverage.py  copilot_benchmark_session.mjs  install.py  install.sh  install_claude_commands.sh  install_codex_skill.sh  run_runtime_benchmark.py  run_skill_benchmark.py  smith_cli.py  smith_client.py  smith_format.py  validate_skill_quality.py
skills/smith/: SKILL.md
skills/smith/references/: auth-troubleshooting.md  behavioral-quality-gates.md  failure-playbook.md  pipelines-format.md  trigger-cases.md  usage-recipes.md
src/smith/: __init__.py  client.py  config.py  discovery.py  errors.py  fanout.py  formatting.py  http.py  pipeline_listing.py  types.py  utils.py
src/smith/benchmark/: __init__.py  codex_cli.py  constants.py  copilot_sdk.py  github_mcp.py  grading.py  runner.py  runtime.py  smith_cli.py  smith_mcp_server.py
src/smith/cli/: __init__.py  handlers.py  main.py  onboarding.py  parser.py
src/smith/providers/: __init__.py  azdo.py  azdo_builds.py  azdo_code.py  azdo_pull_requests.py  azdo_work_items.py  base.py  github.py  github_builds.py  github_code.py  (+11 more)
tests/: conftest.py  support.py  test_azdo_provider_contracts.py  test_base_provider.py  test_cli_behavior.py  test_client_contracts.py  test_config.py  test_fanout.py  test_formatting_contracts.py  test_github_provider_contracts.py  test_parser.py  test_provider_helpers.py
tests/contract/: test_azdo_provider_contracts.py  test_benchmark_smith_cli_contracts.py  test_benchmark_smith_mcp_server_contracts.py  test_cli_behavior.py  test_cli_contracts.py  test_cli_main_contracts.py  test_client_contracts.py  test_github_provider_contracts.py  test_gitlab_provider_contracts.py  test_youtrack_provider_contracts.py
tests/integration/: conftest.py  test_azdo_provider_smoke.py  test_github_provider_smoke.py  test_gitlab_provider_smoke.py
tests/unit/: test_azdo_provider_internals.py  test_base_provider.py  test_benchmark_audit_artifacts.py  test_benchmark_codex_cli.py  test_benchmark_copilot_sdk.py  test_benchmark_github_mcp.py  test_benchmark_grading.py  test_benchmark_runner.py  test_benchmark_runtime.py  test_benchmark_smith_cli_runner.py  test_compat_aliases.py  test_config.py  test_discovery.py  test_fanout.py  test_formatting.py  test_formatting_contracts.py  test_github_provider_internals.py  test_gitlab_provider_internals.py  test_http.py  test_install_script.py  test_onboarding.py  test_parser.py  test_pipeline_listing.py  test_provider_helpers.py  test_utils.py  test_validate_skill_quality.py  test_youtrack_provider_internals.py
(+7 files in other folders)
